# Project-Management-System

./: .gitignore  README.md
cppFinal/: CMakeLists.txt  Client.cpp  Client.hpp  Entity.hpp  FileManager.cpp  FileManager.hpp  Person.cpp  Person.hpp  Project.cpp  Project.hpp  ProjectManagementSystem.cpp  ProjectManagementSystem.hpp  Task.cpp  Task.hpp  TeamMember.cpp  TeamMember.hpp  Vendor.cpp  Vendor.hpp  cppFinal.cbp  cppFinal.depend  cppFinal.layout  main.cpp  projects.csv  projects.txt  tasks.csv  tasks.txt  team.csv  team.txt
